objects/TIMBASURVEYS__QuestionBranchingRule__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__Answer__c</fullName>
        <label>Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Answered__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__GreaterThan__c</fullName>
        <label>GreaterThan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__IsPageBranch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPageBranch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__LessThan__c</fullName>
        <label>LessThan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__NotAnswer__c</fullName>
        <label>NotAnswer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__PageBranchOperator__c</fullName>
        <label>PageBranchOperator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__PageBranchingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PageBranchingRule</label>
        <referenceTo>TIMBASURVEYS__PageBranchingRule__c</referenceTo>
        <relationshipLabel>QuestionBranchingRules</relationshipLabel>
        <relationshipName>QuestionBranchingRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestion</label>
        <referenceTo>TIMBASURVEYS__SurveyQuestion__c</referenceTo>
        <relationshipLabel>QuestionBranchingRules</relationshipLabel>
        <relationshipName>QuestionBranchingRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>QuestionBranchingRules</relationshipLabel>
        <relationshipName>QuestionBranchingRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>QuestionBranchingRule</label>
    <nameField>
        <label>QuestionBranchingRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuestionBranchingRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>